kubernetes-networks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
  annotations:
    cpaas.io/creator: vyshegorodskiysp
