kubernetes-networks/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
  annotations:
    cpaas.io/creator: vyshegorodskiysp
  labels:
    name: nginx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: nginx
        image: nginx:alpine3.22-perl
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: http-port
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 5
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 300Mi
            cpu: 300m
        lifecycle:
          preStop:
            exec:
              command: ["rm", "/homework/index.html"]
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/
      restartPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
      nodeSelector:
        homework: "true"
