kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: homework
  annotations:
    cpaas.io/creator: vyshegorodskiysp
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8000
        path: /
        pathType: Prefix
